ZezexJava: 修正一些警告